<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/DrawerView2"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ListFaslActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
    <!--main linear-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/appMainColor"
        android:orientation="vertical">

        <!--Header-->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="@color/HeaderColor2"
            android:gravity="right"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="20dp"
                android:fontFamily="@font/irsans_b"
                android:text="ئه‌لفوبێ"
                android:textColor="@color/TextColor2"
                android:textSize="30sp" />

            <ImageView
                android:id="@+id/menuBTN2"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_margin="5dp"
                android:background="@mipmap/menu_logo" />

        </LinearLayout>

        <!--Matne header-->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:gravity="center_horizontal"
            android:orientation="vertical"
            >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/irsans_b"
                android:text="@string/fasltka"
                android:textColor="@color/TextColor"
                android:textSize="20sp" />

        </LinearLayout>

        <!--radifakan-->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <!--Radife aval-->
            <LinearLayout
                android:id="@+id/fasleaval"
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:orientation="horizontal"
                android:layout_marginTop="5dp">

                <LinearLayout
                    android:id="@+id/fasledovom"
                    android:layout_width="0dp"
                    android:layout_height="200dp"
                    android:layout_marginLeft="5dp"
                    android:layout_marginRight="2.5dp"
                    android:layout_weight="1"
                    android:background="@drawable/dars_shape"
                    android:orientation="vertical"
                    android:onClick="onClickFasl2">


                    <ImageView
                        android:layout_width="match_parent"
                        android:layout_height="170dp"
                        android:background="@mipmap/fasle_dovom" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center_horizontal"
                        android:text="@string/fasli2"
                        android:fontFamily="@font/irsans_m"
                        android:layout_marginTop="4dp"
                        android:textColor="#000"/>

                </LinearLayout>
                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="200dp"
                    android:layout_marginLeft="2.5dp"
                    android:layout_marginRight="5dp"
                    android:layout_weight="1"
                    android:background="@drawable/dars_shape"
                    android:orientation="vertical"
                    android:onClick="onClickFasl1">

                    <ImageView
                        android:layout_width="match_parent"
                        android:layout_height="170dp"
                        android:background="@mipmap/fasle_aval" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center_horizontal"
                        android:text="@string/fasliaval"
                        android:fontFamily="@font/irsans_m"
                        android:layout_marginTop="4dp"
                        android:textColor="#000"/>

                </LinearLayout>
            </LinearLayout>

            <!--Radife dovom-->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:orientation="horizontal"
                android:layout_marginTop="5dp">

                <LinearLayout
                    android:id="@+id/faslechoarom"
                    android:layout_width="0dp"
                    android:layout_height="200dp"
                    android:layout_marginLeft="5dp"
                    android:layout_marginRight="2.5dp"
                    android:layout_weight="1"
                    android:background="@drawable/dars_shape"
                    android:orientation="vertical"
                    android:onClick="onClickFasl4">


                    <ImageView
                        android:layout_width="match_parent"
                        android:layout_height="170dp"
                        android:background="@mipmap/fasle_chaharom" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center_horizontal"
                        android:text="@string/fasli4"
                        android:fontFamily="@font/irsans_m"
                        android:layout_marginTop="4dp"
                        android:textColor="#000"/>

                </LinearLayout>

                <LinearLayout
                    android:id="@+id/faslesevom"
                    android:layout_width="0dp"
                    android:layout_height="200dp"
                    android:layout_marginLeft="2.5dp"
                    android:layout_marginRight="5dp"
                    android:layout_weight="1"
                    android:background="@drawable/dars_shape"
                    android:orientation="vertical"
                    android:onClick="onClickFasl3">

                    <ImageView
                        android:layout_width="match_parent"
                        android:layout_height="170dp"
                        android:background="@mipmap/fasle_sevom" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center_horizontal"
                        android:text="@string/fasli3"
                        android:fontFamily="@font/irsans_m"
                        android:layout_marginTop="4dp"
                        android:textColor="#000"/>

                </LinearLayout>


            </LinearLayout>

            <!--Radife Sevom-->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:orientation="horizontal"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp">

                <LinearLayout
                    android:id="@+id/faslesheshom"
                    android:layout_width="0dp"
                    android:layout_height="200dp"
                    android:layout_marginLeft="5dp"
                    android:layout_marginRight="2.5dp"
                    android:layout_weight="1"
                    android:background="@drawable/dars_shape"
                    android:orientation="vertical"
                    android:onClick="onClickFasl6">


                    <ImageView
                        android:layout_width="match_parent"
                        android:layout_height="170dp"
                        android:background="@mipmap/fasle_sheshom" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center_horizontal"
                        android:text="@string/fasli6"
                        android:fontFamily="@font/irsans_m"
                        android:layout_marginTop="2dp"
                        android:textColor="#000"/>

                </LinearLayout>

                <LinearLayout
                    android:id="@+id/faslepanjom"
                    android:layout_width="0dp"
                    android:layout_height="200dp"
                    android:layout_marginLeft="2.5dp"
                    android:layout_marginRight="5dp"
                    android:layout_weight="1"
                    android:background="@drawable/dars_shape"
                    android:orientation="vertical"
                    android:onClick="onClickFasl5">

                    <ImageView
                        android:layout_width="match_parent"
                        android:layout_height="170dp"
                        android:background="@mipmap/fasle_panjom" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center_horizontal"
                        android:text="@string/fasli5"
                        android:fontFamily="@font/irsans_m"
                        android:layout_marginTop="2dp"
                        android:textColor="#000"/>

                </LinearLayout>


            </LinearLayout>


        </LinearLayout>


    </LinearLayout>

    </ScrollView>


    <!--Drawer Linear-->
    <LinearLayout
        android:layout_width="200dp"
        android:layout_height="match_parent"
        android:layout_gravity="right"
        android:background="@color/headerColor"
        android:orientation="vertical">

        <!--akse asli-->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:gravity="center"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:layout_gravity="center_horizontal"
                android:background="@mipmap/logo2" />


        </LinearLayout>

        <!--dars-->
        <LinearLayout
            android:id="@+id/darsN"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginTop="30dp"
            android:gravity="center_horizontal"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginRight="10dp"
                android:fontFamily="@font/irsans_b"
                android:text="@string/dars"
                android:textColor="#000"
                android:textSize="25sp" />

            <ImageView
                android:layout_width="40dp"
                android:layout_height="wrap_content"
                android:background="@mipmap/books" />


        </LinearLayout>

        <!--MainMenuJayeza-->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginTop="20dp"
            android:gravity="center_horizontal"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginRight="10dp"
                android:fontFamily="@font/irsans_b"
                android:text="@string/jayeza"
                android:textColor="#000"
                android:textSize="25sp" />

            <ImageView
                android:layout_width="40dp"
                android:layout_height="wrap_content"
                android:background="@mipmap/award" />


        </LinearLayout>

        <!--MainMenuPeyvandi-->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginTop="10dp"
            android:gravity="center_horizontal"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginRight="20dp"
                android:fontFamily="@font/irsans_b"
                android:text="@string/Peyvandi"
                android:textColor="#000"
                android:textSize="25sp" />

            <ImageView
                android:layout_width="40dp"
                android:layout_height="wrap_content"
                android:background="@mipmap/peywandi" />


        </LinearLayout>

        <!--MainMenuChoonadare-->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginTop="20dp"
            android:gravity="center_horizontal"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginRight="10dp"
                android:fontFamily="@font/irsans_b"
                android:text="@string/Choonadare"
                android:textColor="#000"
                android:textSize="25sp" />

            <ImageView
                android:layout_width="40dp"
                android:layout_height="wrap_content"
                android:background="@mipmap/choonadare" />


        </LinearLayout>


    </LinearLayout>

</android.support.v4.widget.DrawerLayout>