<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/DrawerView"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <!--MainLinear(app)-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/appMainColor"
        android:orientation="vertical">

        <!--Header-->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="@color/headerColor"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_margin="5dp"
                android:layout_weight="2"
                android:background="@mipmap/logo" />

            <ImageView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="2"
                android:background="@mipmap/menu_logo"
                android:visibility="invisible" />

            <ImageView
                android:id="@+id/menuBTN"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_margin="5dp"
                android:layout_weight=".5"
                android:background="@mipmap/menu_logo" />

        </LinearLayout>

        <!--MainMenuDars-->
        <LinearLayout
            android:id="@+id/dars"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginTop="30dp"
            android:gravity="center_horizontal"
            android:orientation="horizontal"
            android:onClick="onClickDars">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginRight="10dp"
                android:fontFamily="@font/irsans_b"
                android:text="@string/dars"
                android:textColor="@color/TextColor"
                android:textSize="25sp" />

            <ImageView
                android:layout_width="40dp"
                android:layout_height="wrap_content"
                android:background="@mipmap/books" />

        </LinearLayout>

        <!--MainMenuJayeza-->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginTop="10dp"
            android:gravity="center_horizontal"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginRight="10dp"
                android:fontFamily="@font/irsans_b"
                android:text="@string/jayeza"
                android:textColor="@color/TextColor"
                android:textSize="25sp" />

            <ImageView
                android:layout_width="40dp"
                android:layout_height="wrap_content"
                android:background="@mipmap/award" />


        </LinearLayout>

        <!--MainMenuPeyvandi-->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginTop="10dp"
            android:gravity="center_horizontal"
            android:orientation="horizontal">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginRight="10dp"
                android:fontFamily="@font/irsans_b"
                android:text="@string/Peyvandi"
                android:textColor="@color/TextColor"
                android:textSize="25sp" />
            <ImageView
                android:layout_width="40dp"
                android:layout_height="wrap_content"
                android:background="@mipmap/peywandi" />
        </LinearLayout>
        <!--MainMenuChoonadare-->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginTop="10dp"
            android:gravity="center_horizontal"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginRight="10dp"
                android:fontFamily="@font/irsans_b"
                android:text="@string/Choonadare"
                android:textColor="@color/TextColor"
                android:textSize="25sp" />

            <ImageView
                android:layout_width="40dp"
                android:layout_height="wrap_content"
                android:background="@mipmap/choonadare" />


        </LinearLayout>


    </LinearLayout>

    <!--Navigation bar-->
    <LinearLayout
        android:layout_width="200dp"
        android:layout_height="match_parent"
        android:layout_gravity="right"
        android:background="@color/headerColor"
        android:orientation="vertical">
        <!--akse asli-->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:gravity="center"
            android:orientation="horizontal">
            <ImageView
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:layout_gravity="center_horizontal"
                android:background="@mipmap/logo2" />
        </LinearLayout>
        <!--dars-->
        <LinearLayout
            android:id="@+id/darsN"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginTop="30dp"
            android:gravity="center_horizontal"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginRight="10dp"
                android:fontFamily="@font/irsans_b"
                android:text="@string/dars"
                android:textColor="#000"
                android:textSize="25sp" />

            <ImageView
                android:layout_width="40dp"
                android:layout_height="wrap_content"
                android:background="@mipmap/books" />


        </LinearLayout>

        <!--MainMenuJayeza-->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginTop="20dp"
            android:gravity="center_horizontal"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginRight="10dp"
                android:fontFamily="@font/irsans_b"
                android:text="@string/jayeza"
                android:textColor="#000"
                android:textSize="25sp" />

            <ImageView
                android:layout_width="40dp"
                android:layout_height="wrap_content"
                android:background="@mipmap/award" />


        </LinearLayout>

        <!--MainMenuPeyvandi-->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginTop="10dp"
            android:gravity="center_horizontal"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginRight="20dp"
                android:fontFamily="@font/irsans_b"
                android:text="@string/Peyvandi"
                android:textColor="#000"
                android:textSize="25sp" />

            <ImageView
                android:layout_width="40dp"
                android:layout_height="wrap_content"
                android:background="@mipmap/peywandi" />


        </LinearLayout>

        <!--MainMenuChoonadare-->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginTop="20dp"
            android:gravity="center_horizontal"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginRight="10dp"
                android:fontFamily="@font/irsans_b"
                android:text="@string/Choonadare"
                android:textColor="#000"
                android:textSize="25sp" />

            <ImageView
                android:layout_width="40dp"
                android:layout_height="wrap_content"
                android:background="@mipmap/choonadare" />


        </LinearLayout>


    </LinearLayout>

</android.support.v4.widget.DrawerLayout>